--- a/scenarios/countdown/edge.yml
+++ b/scenarios/countdown/edge.yml
@@ -1,7 +1,7 @@
 ---
 service: edge
 version: '1.0'
-dependencies: time, countdown
+dependencies: time, election
 http_server:
   address: 0.0.0.0
   port: 5000
