--- a/service.yml
+++ b/service.yml
@@ -1,7 +1,5 @@
 ---
 service: <%= ENV['SRV_NAME','NONE'] %>
-version: <%= ENV['SRV_VERSION','1.0'] %>
 dependencies: <%= ENV['SRV_DEPENDENCIES',''] %>
-http_server:
-  address: 0.0.0.0
-  port: 5000
+host: 0.0.0.0
+port: 5000
